--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,33 @@
-<%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>
+#<%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>
+
+<div class="header">
+<div class="container">
+  <h1> My Todo List :,) </h1>
+</div>
+</div>
+
+<div class="main">
+<div class="container">
+
+
+      <%= form_with scope: :post, local: true do |p| %>  
+        <%= p.text_field :task, :placeholder => "i need to ..." %>
+        <%= p.submit "+", :class => 'btn' %> 
+      <% end %>
+
+      <ul class="comments">
+      <% @all_posts.each do |p| %>
+        <li>
+          <%= p.task %>   <%= link_to '•••', post_path(p), :class => 'btn more' %>   
+          <%= link_to '✎', edit_post_path(p), :class => 'btn more' %>
+          <%= link_to '✖', post_path(p),
+                method: :delete,
+                data: { confirm: 'really?' }, :class => 'btn more' %>
+          </li>
+       <% end %>
+      </ul>
+
+  
+
+</div>
+</div>
