--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,4 @@
-#<%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>
-
-<div class="header">
-<div class="container">
-  <h1> My Todo List :,) </h1>
-</div>
-</div>
+<%= react_component("Main") %>
 
 <div class="main">
 <div class="container">
