--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,41 +2,40 @@ html,body {
     font-family:Montserrat, sans-serif;
     margin:0;
     padding:0;
-    
-    }
-    
-    h1 {
+}
+
+h1 {
     border-left:2px solid #00f28f;
     font-size:37px;
     font-weight:400;
     padding-left:20px;
     margin:0;
-    }
-    
-    .header {
+}
+
+.header {
     margin:80px 0 100px;
-    }
-    
-    .header p {
+}
+
+.header p {
     color:#a9a9a9;
-    }
-    
-    .container {
+}
+
+.container {
     margin-right:auto;
     margin-left:auto;
     padding-left:15px;
     padding-right:15px;
-    }
-    
-    a {
+}
+
+a {
     text-decoration: none
-    }
-    
-    form {
+}
+
+form {
     margin:0 0 100px;
-    }
-    
-    form input[type=text] {
+}
+
+form input[type=text] {
     background:#f0f0f0;
     border:none;
     border-left:2px solid #fff;
@@ -44,17 +43,17 @@ html,body {
     font-family:Montserrat, sans-serif;
     transition:background 2s border-left 2s;
     padding:20px;
-    }
-    
-    form input[type=text]:focus {
+}
+
+form input[type=text]:focus {
     background:#fff;
     border-left:2px solid #000;
     box-shadow:none;
     outline:none;
     transition:background 2s border-left 2s;
-    }
-    
-    button.btn,.btn {
+}
+
+button.btn,.btn {
     background:transparent;
     border:none;
     color:#00f28f;
@@ -62,84 +61,84 @@ html,body {
     font-size:27px;
     transition:background 2s color 1s;
     padding:20px 24px;
-    }
-    
-    button.btn:hover,.btn:hover {
+}
+
+button.btn:hover,.btn:hover {
     background:#00f28f;
     color:#fff;
     transition:background 2s color 1s;
-    }
-    
-    .more {
+}
+
+.more {
     color: #000000;
     font-size: 20px;
     padding:5px 7px;
-    }
-    
-    .notes {
+}
+
+.notes {
     font-size: 10px;
-    }
-    
-    
-    ul {
+}
+
+
+ul {
     list-style:none;
     margin:0;
     padding:0;
-    }
-    
-    li {
+}
+
+li {
     border-left:2px solid #000;
     font-size:27px;
     opacity:0;
     padding-left:20px;
     margin:0 0 36px;
-    }
-    
-    li:nth-child(1) {
+}
+
+li:nth-child(1) {
     opacity:1;
-    }
-    
-    li:nth-child(2) {
+}
+
+li:nth-child(2) {
     opacity:0.9;
-    }
-    
-    li:nth-child(3) {
+}
+
+li:nth-child(3) {
     opacity:0.8;
-    }
-    
-    li:nth-child(4) {
+}
+
+li:nth-child(4) {
     opacity:0.7;
-    }
-    
-    li:nth-child(5) {
+}
+
+li:nth-child(5) {
     opacity:0.6;
-    }
-    
-    li:nth-child(6) {
+}
+
+li:nth-child(6) {
     opacity:0.5;
-    }
-    
-    li:nth-child(7) {
+}
+
+li:nth-child(7) {
     opacity:0.4;
-    }
-    
-    li:nth-child(8) {
+}
+
+li:nth-child(8) {
     opacity:0.3;
-    }
-    
-    li:nth-child(9) {
+}
+
+li:nth-child(9) {
     opacity:0.2;
-    }
-    
-    li:nth-child(10) {
+}
+
+li:nth-child(10) {
     opacity:0.1;
-    }
-    
-    li:nth-child(11) {
+}
+
+li:nth-child(11) {
     opacity:0;
-    }
-    
-    @media (min-width: 768px){
+}
+
+@media (min-width: 768px){
     .container {
     width:750px;
     }
@@ -147,20 +146,108 @@ html,body {
     form input[type=text] {
     width:400px;
     }
-    }
-    
-    @media (min-width: 992px){
+}
+
+@media (min-width: 992px){
     .container {
     width:970px;
     }
-    
+
     form input[type=text] {
     width:600px;
     }
-    }
-    
-    @media (min-width: 1200px){
+}
+
+@media (min-width: 1200px){
     .container {
     width:1170px;
     }
+}
+
+.grid {
+    display: grid;
+    grid-gap: 300px;
+    grid-template-columns: 25% auto;
+    margin: auto;
+    width: 83%;
+    height: calc(100vh - 145px);
+}
+
+.todolist {
+    margin-right:auto;
+    margin-left:auto;
+    padding-left:15px;
+    padding-right:15px;
+    max-width: 450px;
+}
+
+.todolist li:hover, a.active {
+    background: #00f28f;
+    
+  }
+
+.todolist a {
+    display: block;
+    color: black;
+    text-decoration: none;
+    border-bottom: 1px solid #dddddd;
+    //padding: 0px 0px 0px;
+    outline: 0;
+}
+
+@media (min-width: 768px){
+    .todolist {
+    width:750px;
     }
+    form input[type=text] {
+    width:400px;
+    }
+}
+
+@media (min-width: 992px){
+    .todolist {
+    width:970px;
+    }
+
+    form input[type=text] {
+    width:600px;
+    }
+}
+
+@media (min-width: 1200px){
+    .todolist {
+    width:1170px;
+    }
+}
+
+.todo {
+    margin-right:auto;
+    margin-left:auto;
+    padding-left:15px;
+    padding-right:15px;
+}
+
+@media (min-width: 768px){
+    .todo {
+    width:750px;
+    }
+    form input[type=text] {
+    width:400px;
+    }
+}
+
+@media (min-width: 992px){
+    .todo {
+    width:970px;
+    }
+
+    form input[type=text] {
+    width:600px;
+    }
+}
+
+@media (min-width: 1200px){
+    .todo {
+    width:1170px;
+    }
+}
