--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -27,8 +27,13 @@ h1 {
     padding-right:15px;
 }
 
-a {
-    text-decoration: none
+.maxwidth {
+    max-width: 450px;
+}
+.container a {
+    text-decoration: none;
+    float: right;
+
 }
 
 form {
@@ -61,12 +66,14 @@ button.btn,.btn {
     font-size:27px;
     transition:background 2s color 1s;
     padding:20px 24px;
+    text-decoration: none;
 }
 
 button.btn:hover,.btn:hover {
     background:#00f28f;
     color:#fff;
     transition:background 2s color 1s;
+    text-decoration: none;
 }
 
 .more {
@@ -225,6 +232,11 @@ li:nth-child(11) {
     margin-left:auto;
     padding-left:15px;
     padding-right:15px;
+    max-width: 500px;
+}
+
+.todo a {
+    float: right;
 }
 
 @media (min-width: 768px){
@@ -250,4 +262,107 @@ li:nth-child(11) {
     .todo {
     width:1170px;
     }
+}
+
+.todoform{
+    margin-top: 15px;
+}
+
+label > strong {
+  display: inline-block;
+  vertical-align: top;
+  text-align: right;
+  width: 100px;
+  margin-right: 6px;
+  font-size: 15px;
+}
+
+input, textarea {
+  padding: 2px 0 3px 3px;
+  width: 400px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+}
+
+input[type="checkbox"] {
+  width: 13px;
+}
+
+button[type="submit"] {
+  background: #f57011;
+  border: none;
+  padding: 5px 25px 8px;
+  font-weight: 500;
+  color: white;
+  cursor: pointer;
+  margin: 10px 0 0 106px;
+}
+
+.errors {
+  border: 1px solid red;
+  border-radius: 5px;
+  margin: 20px 0 35px 0;
+  width: 513px;
+}
+
+.errors h3 {
+  background: red;
+  color: white;
+  padding: 10px;
+  font-size: 15px;
+}
+
+.errors ul li {
+  list-style-type: none;
+  margin: 0;
+  padding: 8px 0 8px 10px;
+  border-top: solid 1px pink;
+  font-size: 12px;
+  font-weight: 0.9;
+}
+
+button.delete {
+  background: none !important;
+  border: none;
+  padding: 0 !important;
+  margin-left: 10px;
+  cursor: pointer;
+  color: #236fff;
+  font-size: 15px;
+  font-weight: normal;
+  margin: 3px 0 0 0;
+  text-decoration: none;
+}
+
+button.delete:hover {
+  text-decoration: underline;
+}
+
+h2 a {
+  color: #236fff;
+  font-size: 15px;
+  font-weight: normal;
+  margin: 3px 12px 0 12px;
+  text-decoration: none;
+}
+
+h2 a:hover {
+  text-decoration: underline;
+}
+
+.form-actions a {
+  color: #236fff;
+  font-size: 15px;
+  margin: 3px 12px 0 12px;
+  text-decoration: none;
+}
+
+.form-actions a:hover {
+  text-decoration: underline;
+}
+
+input.search {
+  width: 92%;
+  margin: 15px 2px;
+  padding: 4px 0 6px 6px;
 }
